fix: product detail description alignment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2378,6 +2378,10 @@ html, body, .homepage-body {
   }
 
   .detail-description {
+    text-aling: justify !important;
+    line-height: 1.6;
+    margin-top: 5px !important;
+    margin-bottom: 20px !important;
     width: 100% !important;
     max-width: 100% !important;
     height: auto !important;
